CMAKE_MINIMUM_REQUIRED(VERSION 3.13)
PROJECT(nonnull_ptr
        VERSION 0.0.3
        LANGUAGES CXX)

# Options
IF(CMAKE_CURRENT_SOURCE_DIR STREQUAL CMAKE_SOURCE_DIR)
  OPTION(NONNULL_PTR_BUILD_TESTS "Set to ON to build tests" ON)
ELSE()
  OPTION(NONNULL_PTR_BUILD_TESTS "Set to ON to build tests" OFF)
ENDIF()

ADD_SUBDIRECTORY(source)
